# travel

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260704_0001_create_auth_tables.py  20260715_0002_create_call_traces.py  20260715_0003_create_trips.py
backend/sql/: auth_schema.sql
backend/src/app/: __init__.py  main.py  mcp_gateway.py
backend/src/app/api/: auth.py  router.py  test_stream_plan.py
backend/src/app/core/: config.py  database.py  redis.py  tracing.py
backend/src/app/graph/: __init__.py  placeholders.py  test_trip_planner.py  transport_planner.py  trip_planner.py  trip_revision.py
backend/src/app/models/: __init__.py  auth.py  db.py  placeholders.py  trip.py
backend/src/app/scripts/: __init__.py  configure_oauth.py
backend/src/app/services/: auth_service.py  llm_service.py  mcp_client.py  oauth_service.py  test_trip_store.py  trace_store.py  trip_store.py
docs/superpowers/plans/: 2026-06-24-chinese-localization.md  2026-06-25-login-page-visual-refinement.md  2026-07-14-login-maintenance.md  2026-07-15-trip-planning-enhancements.md  2026-07-15-user-workspace.md  2026-07-16-route-leg-estimation.md  2026-07-17-homepage-ui-polish.md  2026-07-17-trip-planner-ui-load-reduction.md
docs/superpowers/specs/: 2026-06-24-chinese-localization-design.md  2026-07-14-login-maintenance-design.md  (+4 more)
front/: components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
(+14 files in other folders)
