[project]
name = "ai-travel-planner-backend"
version = "0.0.0"
description = "Backend skeleton for the AI travel planner project."
requires-python = ">=3.12.6"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langchain==1.2.*",
    "langgraph>=0.2.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
